api-gateway/devops/pods/gatewayApi-deployment-service-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  selector:
    matchLabels:
      app: api-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: "europe-west1-docker.pkg.dev/tfg-naru/tfgrepo/image-api-gateway-tfg-develop:[version]"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  annotations:
    cloud.google.com/app-protocols: '{"port-https":"HTTPS"}'
spec:
  ports:
  - name: port-https # ADD THIS
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: api-gateway
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: gateway-cert-name
  rules:
  - host: arzueta.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              name: port-https
